# Minesweeper-SDL-CMake

./: .gitignore  CMakeLists.txt  README.md
cmake/: FIndSDL2_mixer.cmake  FIndSDL2_ttf.cmake  FindSDL2.cmake  FindSDL2_image.cmake
src/: Button.cpp  Button.hpp  Clock.cpp  Clock.hpp  Logic.cpp  Logic.hpp  StartScreen.cpp  StartScreen.hpp  Texture.cpp  Texture.hpp  Variables.cpp  Variables.hpp  main.cpp
